--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,42 @@
 #video {
+  	border: 1px solid black;
+  	box-shadow: 2px 2px 3px black;
+	position: absolute;
+	width: 0%;
+	height: 100%;
+}
+
+#color-input {
+  display: none;
+}
+#color-label {
+  margin-left: 15px;
+  position: absolute;
+  height: 30px;
+  width: 50px;
+} 
+#color-input:checked ~ #color-picker {
+  opacity: 1;
+}
+#color-picker {
+  position: absolute;
+  left: 70px; 
+  background-color: white;
+  height: 150px;
+  width: 185px;
+  border: solid 1px #ccc;
+  opacity: 0;
+  padding: 5px;
+}
+canvas {
   border: 1px solid black;
   box-shadow: 2px 2px 3px black;
-  width:320px;
-  height:240px;
+}
+canvas:hover {
+  cursor: crosshair;
+}
+
+.container {
+    width: 100%;
+    display: inline-block;
 }
